--- a/index.html
+++ b/index.html
@@ -133,13 +133,12 @@
 </section>
 <!----- Call To Action----->
 
-<div class="video-title">
-    <h1>Media Highlights From Recent Church Events</h1>
-</div>
-<section class="cta">
+<section class="video-page">
+    <div class="video-title">
+        <h1>Media Highlights From Recent Church Events</h1>
+    </div>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/c8eN06DYhUg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </section>
-
 
 <!----- Footer ----->
  <section class="footer">
